tests/ui/eii/type_checking/type_params_149983.stderr
error[E0044]: externally implementable items may not have type parameters
  --> $DIR/type_params_149983.rs:7:1
   |
LL | fn foo<T>() {}
   | ^^^^^^^^^^^ can't have type parameters
   |
   = help: replace the type parameters with concrete types like `u32`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0044`.
